openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: bf2-arch-bot
  name: bf2-arch-bot
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: bf2-arch-bot
    weight: 100
  wildcardPolicy: None
